refactor: added removal warning to coal generator item